// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transactions Card > should disable the \`Show More\` button if the card is in the loading state 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Transactions — 0 Displayed Items
    </h1>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal"
      disabled=""
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Show More
      </span>
    </button>
  </header>
   
  <div
    aria-label="Loading"
    class="dusk-progress-bar data-card__progress-bar"
    role="progressbar"
  >
    <div
      class="dusk-progress-bar__filler dusk-progress-bar__filler--undetermined"
    />
  </div>
  
   
</div>
`;

exports[`Transactions Card > should disable the \`Show More\` button if there is no more data to display 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Transactions — 10 Displayed Items
    </h1>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal"
      disabled=""
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Show More
      </span>
    </button>
  </header>
   
  <div
    class="data-card__content"
  >
    <div
      class="table-container transactions-table transactions-card__table"
    >
      <table
        class="table"
      >
        <thead
          class="table__head"
        >
          <tr
            class="table__row"
          >
            <th
              class="table__header-cell"
            >
              ID
            </th>
            
             
            <th
              class="table__header-cell"
            >
              Gas
            </th>
            
             
            <th
              class="table__header-cell"
            >
              Fee (DUSK)
            </th>
            
             
            <th
              class="table__header-cell"
            >
              Status
            </th>
            
             
            <th
              class="table__header-cell"
            >
              Type
            </th>
            
          </tr>
        </thead>
         
        <tbody
          class="table__body"
        >
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface transaction__link"
                href="/some-base-path/transactions/transaction?id=070280c69500df7d1b40942981a3b599ccf9f71ba62f96d63e322994efca2a0e"
              >
                070280c695...94efca2a0e
              </a>
               
              <small
                class="transaction__time"
              >
                18 hours ago
              </small>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              50,000,000
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0.000215552
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-success"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral transaction__type"
              >
                transfer
              </span>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface transaction__link"
                href="/some-base-path/transactions/transaction?id=534f753d5a420fddc21c84d76ff26b87cc48ea75b450c082759d155153259c00"
              >
                534f753d5a...5153259c00
              </a>
               
              <small
                class="transaction__time"
              >
                18 hours ago
              </small>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              50,000,000
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0.000215617
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-success"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral transaction__type"
              >
                transfer
              </span>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface transaction__link"
                href="/some-base-path/transactions/transaction?id=c6f13af20c23b8bc55d22a416a191e3a6ba47128b4d7dc3ac6fce5fc68ebb102"
              >
                c6f13af20c...fc68ebb102
              </a>
               
              <small
                class="transaction__time"
              >
                18 hours ago
              </small>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              50,000,000
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0.000214413
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-success"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral transaction__type"
              >
                transfer
              </span>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface transaction__link"
                href="/some-base-path/transactions/transaction?id=31c7dce26a5a6ef1392f53630b8e2714981f10eaeea2685c5a37dbbf7bcb4c04"
              >
                31c7dce26a...bf7bcb4c04
              </a>
               
              <small
                class="transaction__time"
              >
                18 hours ago
              </small>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              500,000,000
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0.000291769
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-success"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral transaction__type"
              >
                transfer
              </span>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface transaction__link"
                href="/some-base-path/transactions/transaction?id=4fa6e913c083aa595530b1f6c010c7e5a58121307c991ea6782f9e9e4dd5510d"
              >
                4fa6e913c0...9e4dd5510d
              </a>
               
              <small
                class="transaction__time"
              >
                18 hours ago
              </small>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              500,000,000
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0.000290764
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-success"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral transaction__type"
              >
                transfer
              </span>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface transaction__link"
                href="/some-base-path/transactions/transaction?id=d1a7928a435021d87ea3649bff57c8154fc7b5c6c68081a61fea5779ccdb2e04"
              >
                d1a7928a43...79ccdb2e04
              </a>
               
              <small
                class="transaction__time"
              >
                18 hours ago
              </small>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              500,000,000
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0.000291961
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-success"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral transaction__type"
              >
                transfer
              </span>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface transaction__link"
                href="/some-base-path/transactions/transaction?id=004ca8683c315b9270e04d3768dfb58fb0f65d92a9469ca31a5d97cff9718b06"
              >
                004ca8683c...cff9718b06
              </a>
               
              <small
                class="transaction__time"
              >
                18 hours ago
              </small>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              500,000,000
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0.000292039
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-success"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral transaction__type"
              >
                transfer
              </span>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface transaction__link"
                href="/some-base-path/transactions/transaction?id=b5a77063e45dd90b97b2c30b4cd670fbf04ae60c4b8e3ea9fd0d0b4496253a05"
              >
                b5a77063e4...4496253a05
              </a>
               
              <small
                class="transaction__time"
              >
                19 hours ago
              </small>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              500,000,000
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0.000290406
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-success"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral transaction__type"
              >
                transfer
              </span>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface transaction__link"
                href="/some-base-path/transactions/transaction?id=b263d9d594439be92bb9349bd97f55a05060956419f2f4a32925639d80b06e0b"
              >
                b263d9d594...9d80b06e0b
              </a>
               
              <small
                class="transaction__time"
              >
                19 hours ago
              </small>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              500,000,000
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0.000291537
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-success"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral transaction__type"
              >
                transfer
              </span>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              <a
                class="dusk-anchor dusk-anchor--on-surface transaction__link"
                href="/some-base-path/transactions/transaction?id=b4525cb82f5cd56fcf8ceb2eb30f647d2c3567e82abb8265dd12daf5275d7709"
              >
                b4525cb82f...f5275d7709
              </a>
               
              <small
                class="transaction__time"
              >
                19 hours ago
              </small>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <b
                class="transaction__fee-price-label"
              >
                PRICE:
              </b>
               
              1
              <br />
               
              <b
                class="transaction__fee-limit-label"
              >
                LIMIT:
              </b>
               
              500,000,000
            </td>
            
             
            <td
              class="table__data-cell"
            >
              0.000291361
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-success"
              >
                success
              </span>
            </td>
            
             
            <td
              class="table__data-cell"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral transaction__type"
              >
                transfer
              </span>
            </td>
            
             
          </tr>
          
        </tbody>
      </table>
    </div>
    
  </div>
  
   
</div>
`;

exports[`Transactions Card > should render the \`TransactionsCard\` component 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Transactions — 0 Displayed Items
    </h1>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Show More
      </span>
    </button>
  </header>
   
  
   
</div>
`;
